docs: update domain references to 'atl.chat' for consistency
Update all instances of 'yourdomain.com' and 'example.com' to 'atl.chat'
across documentation, configuration files, and scripts. This change
ensures consistency and clarity in the setup instructions and examples,
aligning them with the intended domain for deployment.

The change helps users follow the setup process more easily by providing
a consistent and specific domain reference, reducing potential confusion
when configuring their XMPP server environment.

--- a/examples/apache-websocket.conf
+++ b/examples/apache-websocket.conf
@@ -16,11 +16,11 @@
 # HTTP Virtual Host (Redirect to HTTPS)
 # ========================================================================
 <VirtualHost *:80>
-ServerName yourdomain.com
-ServerAlias www.yourdomain.com
+ServerName atl.chat
+ServerAlias www.atl.chat
 
 # Redirect all HTTP traffic to HTTPS
-Redirect permanent / https://yourdomain.com/
+Redirect permanent / https://atl.chat/
 
 # Optional: Specific redirect for WebSocket
 # Redirect permanent /xmpp-websocket https://yourdomain.com/xmpp-websocket
@@ -30,8 +30,8 @@ Redirect permanent / https://yourdomain.com/
 # HTTPS Virtual Host with WebSocket Support
 # ========================================================================
 <VirtualHost *:443>
-ServerName yourdomain.com
-ServerAlias www.yourdomain.com
+ServerName atl.chat
+ServerAlias www.atl.chat
 
 # SSL Configuration
 SSLEngine on
@@ -213,12 +213,12 @@ CustomLog $ {
 # Multiple Domain Configuration Example
 # ========================================================================
 <VirtualHost *:443>
-ServerName chat.yourdomain.com
+ServerName xmpp.atl.chat
 
 # SSL configuration (use separate certificate or wildcard)
 SSLEngine on
-SSLCertificateFile /path/to/chat.yourdomain.com.crt
-SSLCertificateKeyFile /path/to/chat.yourdomain.com.key
+SSLCertificateFile /path/to/xmpp.atl.chat.crt
+SSLCertificateKeyFile /path/to/xmpp.atl.chat.key
 
 # SSL settings (same as above)
 SSLProtocol all -SSLv3 -TLSv1 -TLSv1.1
@@ -228,7 +228,7 @@ SSLCipherSuite ECDHE+AESGCM:ECDHE+CHACHA20:DHE+AESGCM:DHE+CHACHA20:!aNULL:!MD5:!
 Header always set Strict-Transport-Security "max-age=31536000; includeSubDomains"
 
 <IfModule mod_proxy.c>
-ProxyPreserveHost On # This ensures Host header is chat.yourdomain.com
+    ProxyPreserveHost On # This ensures Host header is xmpp.atl.chat
 ProxyTimeout 900
 
 <IfModule mod_proxy_wstunnel.c>
@@ -265,12 +265,12 @@ ProxySet lbmethod=byrequests
 
 # Example VirtualHost using load balancer
 <VirtualHost *:443>
-ServerName cluster.yourdomain.com
+ServerName cluster.atl.chat
 
 # SSL configuration
 SSLEngine on
-SSLCertificateFile /path/to/cluster.yourdomain.com.crt
-SSLCertificateKeyFile /path/to/cluster.yourdomain.com.key
+SSLCertificateFile /path/to/cluster.atl.chat.crt
+SSLCertificateKeyFile /path/to/cluster.atl.chat.key
 
 <IfModule mod_proxy.c>
 ProxyPreserveHost On
