--- a/examples/env.example
+++ b/examples/env.example
@@ -11,11 +11,11 @@
 # Your XMPP domain (REQUIRED - change this!)
 # This is the domain users will have in their JID (e.g., user@atl.chat)
 # Use SRV records to delegate to xmpp.atl.chat for clean separation
-PROSODY_DOMAIN=yourdomain.com
+PROSODY_DOMAIN=atl.chat
 
 # Administrator JIDs (comma-separated)
 # Use the same domain as PROSODY_DOMAIN
-PROSODY_ADMINS=admin@yourdomain.com
+PROSODY_ADMINS=admin@atl.chat
 
 # ============================================================================
 # DATABASE CONFIGURATION
@@ -97,10 +97,10 @@ GRAFANA_ADMIN_PASSWORD=ChangeMe123!
 # ============================================================================
 
 # XMPP Services:
-# - Admin Panel: https://yourdomain.com:5281/admin
-# - File Upload: https://yourdomain.com:5281/upload
-# - WebSocket: wss://yourdomain.com:5281/xmpp-websocket
-# - BOSH: https://yourdomain.com:5281/http-bind
+# - Admin Panel: https://xmpp.atl.chat:5281/admin
+# - File Upload: https://xmpp.atl.chat:5281/upload
+# - WebSocket: wss://xmpp.atl.chat:5281/xmpp-websocket
+# - BOSH: https://xmpp.atl.chat:5281/http-bind
 
 # Monitoring Services:
 # - Prometheus: http://localhost:9090
@@ -108,9 +108,9 @@ GRAFANA_ADMIN_PASSWORD=ChangeMe123!
 # - Node Exporter: http://localhost:9100
 
 # TURN/STUN Services:
-# - STUN: yourdomain.com:3478
-# - TURN: yourdomain.com:3478
-# - TURNS (TLS): yourdomain.com:5349
+# - STUN: xmpp.atl.chat:3478
+# - TURN: xmpp.atl.chat:3478
+# - TURNS (TLS): xmpp.atl.chat:5349
 
 # For standard ports (80/443), set:
 # PROSODY_HTTP_PORT=80
