--- a/examples/nginx-websocket.conf
+++ b/examples/nginx-websocket.conf
@@ -12,7 +12,7 @@
 server {
     listen 80;
     listen [::]:80;
-    server_name yourdomain.com;
+    server_name atl.chat;
 
     # Redirect all HTTP to HTTPS
     return 301 https://$server_name$request_uri;
@@ -22,7 +22,7 @@ server {
 server {
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
-    server_name yourdomain.com;
+    server_name atl.chat;
 
     # SSL/TLS Configuration
     ssl_certificate /path/to/your/certificate.crt;
@@ -210,7 +210,7 @@ server {
         # return 301 https://webclient.yourdomain.com;
 
         # Option 3: Simple info page
-        return 200 'XMPP Server - WebSocket endpoint: wss://yourdomain.com/xmpp-websocket';
+        return 200 'XMPP Server - WebSocket endpoint: wss://atl.chat/xmpp-websocket';
         add_header Content-Type text/plain;
     }
 }
@@ -223,11 +223,11 @@ server {
 server {
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
-    server_name chat.yourdomain.com;
+    server_name xmpp.atl.chat;
 
     # SSL configuration (use separate certificate or wildcard)
-    ssl_certificate /path/to/chat.yourdomain.com.crt;
-    ssl_certificate_key /path/to/chat.yourdomain.com.key;
+    ssl_certificate /path/to/xmpp.atl.chat.crt;
+    ssl_certificate_key /path/to/xmpp.atl.chat.key;
 
     # SSL settings (same as above)
     ssl_protocols TLSv1.2 TLSv1.3;
@@ -239,7 +239,7 @@ server {
         proxy_http_version 1.1;
         proxy_set_header Connection "Upgrade";
         proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Host $host; # This will be chat.yourdomain.com
+        proxy_set_header Host $host; # This will be xmpp.atl.chat
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_read_timeout 900s;
