--- a/examples/env.example
+++ b/examples/env.example
@@ -67,6 +67,21 @@ PROSODY_UPLOAD_SIZE_LIMIT=50485760
 TURN_SECRET=ChangeMe123!
 
 # ============================================================================
+# CERTIFICATE MANAGEMENT (Optional - for automated certificate generation)
+# ============================================================================
+
+# DNS provider credentials (choose one)
+# Cloudflare
+# CLOUDFLARE_API_TOKEN=your_cloudflare_api_token
+
+# AWS Route53
+# AWS_ACCESS_KEY_ID=your_aws_access_key
+# AWS_SECRET_ACCESS_KEY=your_aws_secret_key
+
+# DigitalOcean
+# DO_AUTH_TOKEN=your_digitalocean_token
+
+# ============================================================================
 # TURN/STUN SERVER CONFIGURATION (for voice/video calls)
 # ============================================================================
 
