feat: remove Grafana from monitoring stack
- Remove Grafana service from Docker Compose configuration
- Remove Grafana volume and environment variables
- Update all documentation to remove Grafana references
- Simplify monitoring stack to use Prometheus directly
- Update architecture diagrams and service tables
- Remove Grafana ports and admin password configuration
- Update deployment examples to exclude Grafana

Streamlines monitoring stack while maintaining Prometheus metrics
collection and system monitoring capabilities.

--- a/examples/env.example
+++ b/examples/env.example
@@ -101,11 +101,7 @@ TURN_PASSWORD=ChangeMe123!
 
 # Monitoring service ports
 PROMETHEUS_PORT=9090               # Prometheus metrics
-GRAFANA_PORT=3000                  # Grafana dashboards
 NODE_EXPORTER_PORT=9100            # System metrics
-
-# Grafana admin password
-GRAFANA_ADMIN_PASSWORD=ChangeMe123!
 
 # ============================================================================
 # WEB ACCESS URLS (with default ports)
@@ -119,7 +115,6 @@ GRAFANA_ADMIN_PASSWORD=ChangeMe123!
 
 # Monitoring Services:
 # - Prometheus: http://localhost:9090
-# - Grafana: http://localhost:3000
 # - Node Exporter: http://localhost:9100
 
 # TURN/STUN Services:
@@ -143,4 +138,4 @@ GRAFANA_ADMIN_PASSWORD=ChangeMe123!
 # docker-compose up -d
 
 # Custom service selection:
-# docker-compose up -d prosody db grafana prometheus 
+# docker-compose up -d prosody db prometheus 
