fix: replace docker-compose commands with docker compose
- Updated all docker-compose command references to use docker compose (new syntax)
- Kept filename references (docker-compose.yml) unchanged as they refer to actual filenames
- Updated across all documentation, scripts, and configuration files
- Simplified Docker Compose version check in prosody-manager script

--- a/examples/env.example
+++ b/examples/env.example
@@ -119,10 +119,10 @@ NODE_EXPORTER_PORT=9100            # System metrics
 # ============================================================================
 
 # Minimal deployment (XMPP + Database only):
-# docker-compose up -d prosody db
+# docker compose up -d prosody db
 
 # Full deployment (all services):
-# docker-compose up -d
+# docker compose up -d
 
 # Custom service selection:
-# docker-compose up -d prosody db prometheus 
+# docker compose up -d prosody db prometheus 
