fix(docker): align Dockerfile config path with volume mount
- Change COPY config/ destination from /etc/prosody/custom/ to /etc/prosody/config/
- Ensures consistency with docker-compose.yml volume mount: ./config:/etc/prosody/config:ro
- Prevents confusion between build-time and runtime configuration paths

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -161,7 +161,7 @@ RUN mkdir -p /usr/lib/prosody/community-modules &&
     chown -R prosody:prosody /usr/lib/prosody/community-modules/ 2>/dev/null || true
 
 # Copy configuration files
-COPY config/ /etc/prosody/custom/
+COPY config/ /etc/prosody/config/
 
 # Copy scripts
 COPY scripts/entrypoint.sh /opt/prosody/scripts/
