feat(docker): convert key volumes to local directories for easier administration
- Change prosody_certs volume to ./certs for direct certificate management
- Change prosody_logs volume to ./logs for easier log access and monitoring
- Update certbot services to use local cert directory
- Remove unused named volumes from docker-compose.yml
- Add new directories to .gitignore to prevent committing runtime data
- Create README files in each directory explaining their purpose and usage

Benefits:
- Direct filesystem access to logs without docker exec
- Easier certificate management and Let's Encrypt integration
- Simplified backup and monitoring workflows
- Maintains data persistence while improving accessibility

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,11 @@
 prosody-hg
 prosody-modules
 research/
+
+# Runtime data directories (local bind mounts)
+logs/
+certs/
+letsencrypt-webroot/
+
+# Environment configuration
+.env
