refactor(monitoring): remove redundant node exporter from Docker stack
- Remove node-exporter service from docker-compose.yml since system already has one
- Update env.example to reflect centralized monitoring approach
- Prevent port conflicts and resource duplication
- Maintain Prosody metrics endpoint for external Prometheus scraping

Benefits:
- Avoid running duplicate node exporters on same system
- Prevent port 9100 conflicts
- Cleaner Docker stack focused on XMPP services only
- External Prometheus can scrape existing system node exporter

--- a/examples/env.example
+++ b/examples/env.example
@@ -83,12 +83,11 @@ TURN_USERNAME=prosody
 TURN_PASSWORD=ChangeMe123!
 
 # ============================================================================
-# MONITORING CONFIGURATION
+# MONITORING CONFIGURATION (for centralized monitoring)
 # ============================================================================
 
-# Monitoring service ports
-PROMETHEUS_PORT=9090               # Prometheus metrics
-NODE_EXPORTER_PORT=9100            # System metrics
+# No local monitoring services - using centralized Prometheus/Grafana
+# Prosody metrics available at: https://xmpp.atl.chat:5281/metrics
 
 # ============================================================================
 # WEB ACCESS URLS (with default ports)
@@ -100,9 +99,9 @@ NODE_EXPORTER_PORT=9100            # System metrics
 # - WebSocket: wss://xmpp.atl.chat:5281/xmpp-websocket
 # - BOSH: https://xmpp.atl.chat:5281/http-bind
 
-# Monitoring Services:
-# - Prometheus: http://localhost:9090
-# - Node Exporter: http://localhost:9100
+# Monitoring Services (for external Prometheus to scrape):
+# - Prosody Metrics: http://xmpp.atl.chat:5280/metrics
+# - System metrics: Available via existing node exporter on host
 
 # TURN/STUN Services:
 # - STUN: xmpp.atl.chat:3478
