--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -69,6 +69,9 @@ services:
       # Logs (local directory for easier access)
       - ./logs:/var/log/prosody
 
+      # Let's Encrypt webroot (for HTTP-01 challenges)
+      - ./letsencrypt-webroot:/var/www/certbot
+
     # Health check
     healthcheck:
       test: ['CMD', '/opt/prosody/scripts/health-check.sh']
