refactor: move Docker files to root directory and update all references
- Move docker/Dockerfile to ./Dockerfile
- Move docker/docker-compose.yml to ./docker-compose.yml
- Remove empty docker/ directory
- Update docker-compose.yml build context from .. to .
- Update dockerfile path from docker/Dockerfile to Dockerfile
- Update documentation references to Docker files:
  * Fix architecture.md project structure
  * Update README.md Docker badge link
  * Update all path references in documentation

Benefits:
- Cleaner project structure with Docker files at root level
- Simplified build context and paths
- Standard Docker project layout convention
- Easier access to Docker files for developers

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,9 +10,9 @@ services:
   # ============================================================================
   prosody:
     build:
-      context: ..
-      dockerfile: docker/Dockerfile
-    image: professional-prosody:latest
+      context: .
+      dockerfile: Dockerfile
+    image: xmpp-atl-chat:latest
     container_name: prosody
     hostname: prosody
     restart: unless-stopped
