fix: make configuration properly use environment variables
- Fix ports to use PROSODY_*_PORT environment variables
- Fix file upload size limit to use PROSODY_UPLOAD_SIZE_LIMIT
- Fix log level to use PROSODY_LOG_LEVEL
- Add missing S2S Direct TLS port configuration
- Add connection and registration throttling environment variables
- Update Docker Compose to pass all port environment variables
- Update env.example with new optional advanced settings

All configuration options are now properly controlled by environment
variables instead of hardcoded values, following the 10x principle.

--- a/examples/env.example
+++ b/examples/env.example
@@ -44,14 +44,25 @@ PROSODY_HTTPS_PORT=5281            # HTTPS (BOSH/WebSocket/Admin)
 # OPTIONAL SETTINGS
 # ============================================================================
 
-# Registration (set to true only if you want open registration)
-PROSODY_ALLOW_REGISTRATION=false
+# Registration (set to true for open registration)
+PROSODY_ALLOW_REGISTRATION=true
 
 # Logging level (debug, info, warn, error)
 PROSODY_LOG_LEVEL=info
 
 # File upload size limit in bytes (default: ~50MB)
 PROSODY_UPLOAD_SIZE_LIMIT=50485760
+
+# ============================================================================
+# ADVANCED SETTINGS (Optional - defaults are usually fine)
+# ============================================================================
+
+# Connection and rate limiting
+# PROSODY_MAX_CONNECTIONS_PER_IP=5
+
+# Registration throttling (when registration is enabled)
+# PROSODY_REGISTRATION_THROTTLE_MAX=3
+# PROSODY_REGISTRATION_THROTTLE_PERIOD=3600
 
 # ============================================================================
 # SECURITY CREDENTIALS (Optional - for enhanced features)
