--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,6 +41,14 @@ services:
       - PROSODY_LOG_LEVEL=${PROSODY_LOG_LEVEL:-info}
       - PROSODY_ALLOW_REGISTRATION=${PROSODY_ALLOW_REGISTRATION:-false}
       - PROSODY_UPLOAD_SIZE_LIMIT=${PROSODY_UPLOAD_SIZE_LIMIT:-50485760}
+      
+      # Port configuration (optional, defaults are usually fine)
+      - PROSODY_C2S_PORT=${PROSODY_C2S_PORT:-5222}
+      - PROSODY_S2S_PORT=${PROSODY_S2S_PORT:-5269}
+      - PROSODY_C2S_DIRECT_TLS_PORT=${PROSODY_C2S_DIRECT_TLS_PORT:-5223}
+      - PROSODY_S2S_DIRECT_TLS_PORT=${PROSODY_S2S_DIRECT_TLS_PORT:-5270}
+      - PROSODY_HTTP_PORT=${PROSODY_HTTP_PORT:-5280}
+      - PROSODY_HTTPS_PORT=${PROSODY_HTTPS_PORT:-5281}
 
     # Port mappings
     ports:
