feat: enhance mod_http_files configuration with environment variables
- Add PROSODY_HTTP_FILES_DIR environment variable for static file serving
- Add PROSODY_HTTP_DIR_LISTING environment variable for directory listing
- Create comprehensive static file serving documentation
- Maintain existing Let's Encrypt webroot configuration
- Add example HTML template for XMPP server landing page

This allows users to easily serve static web content alongside their
XMPP server using environment variable configuration.

--- a/examples/env.example
+++ b/examples/env.example
@@ -64,6 +64,10 @@ PROSODY_UPLOAD_SIZE_LIMIT=50485760
 # PROSODY_REGISTRATION_THROTTLE_MAX=3
 # PROSODY_REGISTRATION_THROTTLE_PERIOD=3600
 
+# Static file serving (optional - for serving web content)
+# PROSODY_HTTP_FILES_DIR=/var/www/html
+# PROSODY_HTTP_DIR_LISTING=false
+
 # ============================================================================
 # SECURITY CREDENTIALS (Optional - for enhanced features)
 # ============================================================================
