feat: enhance mod_http_file_share configuration with environment variables
- Add comprehensive environment variable support for file upload settings:
  - PROSODY_UPLOAD_DAILY_QUOTA for per-user daily limits
  - PROSODY_UPLOAD_EXPIRE_AFTER for file retention period
  - PROSODY_UPLOAD_GLOBAL_QUOTA for server-wide storage limits
  - PROSODY_UPLOAD_ALLOWED_TYPES for file type restrictions
  - PROSODY_UPLOAD_PATH for custom storage location

- Create comprehensive file upload documentation with:
  - Configuration examples for different use cases
  - Security and privacy considerations
  - Client support information
  - Troubleshooting guides
  - Advanced deployment scenarios

- Update Docker Compose and env.example with new variables
- Maintain backward compatibility with existing defaults

All XEP-0363 HTTP File Upload features now configurable via environment
variables following the established 10x principle.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,6 +42,13 @@ services:
       - PROSODY_ALLOW_REGISTRATION=${PROSODY_ALLOW_REGISTRATION:-false}
       - PROSODY_UPLOAD_SIZE_LIMIT=${PROSODY_UPLOAD_SIZE_LIMIT:-50485760}
       
+      # File upload configuration (XEP-0363)
+      - PROSODY_UPLOAD_DAILY_QUOTA=${PROSODY_UPLOAD_DAILY_QUOTA:-}
+      - PROSODY_UPLOAD_EXPIRE_AFTER=${PROSODY_UPLOAD_EXPIRE_AFTER:-}
+      - PROSODY_UPLOAD_GLOBAL_QUOTA=${PROSODY_UPLOAD_GLOBAL_QUOTA:-}
+      - PROSODY_UPLOAD_ALLOWED_TYPES=${PROSODY_UPLOAD_ALLOWED_TYPES:-}
+      - PROSODY_UPLOAD_PATH=${PROSODY_UPLOAD_PATH:-}
+      
       # Port configuration (optional, defaults are usually fine)
       - PROSODY_C2S_PORT=${PROSODY_C2S_PORT:-5222}
       - PROSODY_S2S_PORT=${PROSODY_S2S_PORT:-5269}
