--- a/examples/env.example
+++ b/examples/env.example
@@ -54,6 +54,28 @@ PROSODY_LOG_LEVEL=info
 PROSODY_UPLOAD_SIZE_LIMIT=50485760
 
 # ============================================================================
+# FILE UPLOAD SETTINGS (XEP-0363: HTTP File Upload)
+# ============================================================================
+
+# Daily upload quota per user in bytes (default: 1GB)
+# PROSODY_UPLOAD_DAILY_QUOTA=1073741824
+
+# File expiration time in seconds (default: 30 days)
+# PROSODY_UPLOAD_EXPIRE_AFTER=2592000
+
+# Global storage quota for all users in bytes (default: unlimited)
+# PROSODY_UPLOAD_GLOBAL_QUOTA=10737418240
+
+# Allowed file types (comma-separated MIME types, default: all types)
+# Examples:
+# PROSODY_UPLOAD_ALLOWED_TYPES="image/*,video/*,audio/*"  # Media only
+# PROSODY_UPLOAD_ALLOWED_TYPES="image/jpeg,image/png,image/gif"  # Specific images
+# PROSODY_UPLOAD_ALLOWED_TYPES="text/plain,application/pdf"  # Documents
+
+# Upload storage path (default: /var/lib/prosody/http_file_share)
+# PROSODY_UPLOAD_PATH=/var/lib/prosody/http_file_share
+
+# ============================================================================
 # ADVANCED SETTINGS (Optional - defaults are usually fine)
 # ============================================================================
 
