--- a/examples/env.example
+++ b/examples/env.example
@@ -22,9 +22,16 @@ PROSODY_ADMINS=admin@atl.chat
 # ============================================================================
 
 # Database credentials (REQUIRED for production)
+# Note: PROSODY_DB_* variables are used by Prosody
+# POSTGRES_* variables are used by the PostgreSQL container
 PROSODY_DB_NAME=prosody
 PROSODY_DB_USER=prosody
 PROSODY_DB_PASSWORD=ChangeMe123!
+
+# PostgreSQL container variables (should match the PROSODY_DB_* values above)
+POSTGRES_DB=prosody
+POSTGRES_USER=prosody
+POSTGRES_PASSWORD=ChangeMe123!
 
 # ============================================================================
 # PORT CONFIGURATION (Optional - defaults are usually fine)
@@ -118,6 +125,10 @@ TURN_MAX_PORT=65535                # RTP relay port range end
 # TURN server authentication
 TURN_USERNAME=prosody
 TURN_PASSWORD=ChangeMe123!
+
+# TURN server domain configuration (automatically uses PROSODY_DOMAIN if not set)
+TURN_DOMAIN=atl.chat
+TURN_REALM=atl.chat
 
 # ============================================================================
 # MONITORING CONFIGURATION (for centralized monitoring)
