feat: enhance service discovery with comprehensive configuration
- Add disco_items configuration for automatic service discovery
- Include default services: MUC, file upload, SOCKS5 proxy
- Support custom disco items via PROSODY_DISCO_ITEMS environment variable
- Add admin visibility control via PROSODY_DISCO_EXPOSE_ADMINS
- Create comprehensive service discovery documentation
- Add environment variable examples to env.example
- Improve client compatibility with automatic service detection
- Support external service integration (IRC gateways, bridges, etc.)
- Follow XEP-0030 best practices for service organization

--- a/examples/env.example
+++ b/examples/env.example
@@ -83,6 +83,20 @@ PROSODY_UPLOAD_SIZE_LIMIT=50485760
 # PROSODY_UPLOAD_PATH=/var/lib/prosody/http_file_share
 
 # ============================================================================
+# SERVICE DISCOVERY SETTINGS (XEP-0030)
+# ============================================================================
+
+# Whether to expose admin accounts in service discovery (default: false for privacy)
+# Set to true if you want abuse reporters to easily identify administrators
+# PROSODY_DISCO_EXPOSE_ADMINS=false
+
+# Additional services to advertise in service discovery
+# Format: "jid1,name1;jid2,name2" - semicolon separated, comma between JID and name
+# Examples:
+# PROSODY_DISCO_ITEMS="irc.example.com,IRC Gateway;channels.example.net,Public Channels"
+# PROSODY_DISCO_ITEMS="conference.jabber.org,Public Conference Server"
+
+# ============================================================================
 # ADVANCED SETTINGS (Optional - defaults are usually fine)
 # ============================================================================
 
