feat: enhance OpenMetrics monitoring with comprehensive configuration
- Add proper access control for /metrics endpoint via PROSODY_METRICS_ALLOW_IPS
- Support CIDR ranges for monitoring networks via PROSODY_METRICS_ALLOW_CIDR
- Optimize statistics collection with configurable PROSODY_STATISTICS_INTERVAL
- Default to 'manual' mode for single Prometheus instance (optimal performance)
- Add comprehensive monitoring documentation with metrics catalog
- Include Prometheus configuration examples and scrape configs
- Document Grafana dashboard recommendations and PromQL queries
- Add production alerting rules for critical and warning conditions
- Implement security best practices for metrics endpoint access
- Follow mod_http_openmetrics documentation recommendations
- Support both single and multi-Prometheus instance deployments

--- a/examples/env.example
+++ b/examples/env.example
@@ -148,8 +148,21 @@ TURN_REALM=atl.chat
 # MONITORING CONFIGURATION (for centralized monitoring)
 # ============================================================================
 
-# No local monitoring services - using centralized Prometheus/Grafana
-# Prosody metrics available at: https://xmpp.atl.chat:5281/metrics
+# Statistics collection interval for Prometheus metrics
+# Use "manual" for single Prometheus instance (optimal performance)
+# Use scrape interval (e.g., "30") for multiple Prometheus instances
+# PROSODY_STATISTICS_INTERVAL=manual
+
+# Access control for /metrics endpoint (security critical)
+# Comma-separated list of IP addresses allowed to access metrics
+# PROSODY_METRICS_ALLOW_IPS=192.168.1.100,10.0.0.50
+
+# CIDR range for monitoring networks (alternative to individual IPs)
+# PROSODY_METRICS_ALLOW_CIDR=192.168.1.0/24
+
+# Metrics endpoint URL: http://your-domain:5280/metrics
+# Configure your external Prometheus to scrape this endpoint
+# See examples/prometheus-scrape-config.yml for configuration
 
 # ============================================================================
 # WEB ACCESS URLS (with default ports)
