feat: enhance Message Archive Management with comprehensive configuration
- Add full environment variable support for all MAM settings
- Configure archive retention via PROSODY_ARCHIVE_EXPIRES_AFTER (1d/1w/1m/1y/never)
- Set archive policy via PROSODY_ARCHIVE_POLICY (false/roster/true)
- Tune performance with PROSODY_ARCHIVE_MAX_QUERY_RESULTS and cleanup intervals
- Add smart archiving support via PROSODY_MAM_SMART_ENABLE for storage optimization
- Support custom namespace exclusions for reduced storage overhead
- Enable archive compression by default with configurable override
- Add legacy migration support for archive2 store compatibility
- Create comprehensive MAM documentation with client guides and troubleshooting
- Include monitoring, maintenance, and compliance guidance
- Follow mod_mam documentation best practices for production deployments
- Support both SQL and memory storage backends with detailed configuration

--- a/examples/env.example
+++ b/examples/env.example
@@ -97,6 +97,40 @@ PROSODY_UPLOAD_SIZE_LIMIT=50485760
 # PROSODY_DISCO_ITEMS="conference.jabber.org,Public Conference Server"
 
 # ============================================================================
+# MESSAGE ARCHIVE MANAGEMENT (MAM) SETTINGS (XEP-0313)
+# ============================================================================
+
+# How long to keep archived messages (default: 1y for compliance)
+# Formats: "1d" (1 day), "1w" (1 week), "1m" (1 month), "1y" (1 year), "never"
+# PROSODY_ARCHIVE_EXPIRES_AFTER=1y
+
+# Archive policy: who gets messages archived by default
+# "false" = no archiving, "roster" = contacts only, "true" = all messages
+# PROSODY_ARCHIVE_POLICY=roster
+
+# Maximum messages returned per query (default: 250)
+# Lower = more queries, higher = more server resources per query
+# PROSODY_ARCHIVE_MAX_QUERY_RESULTS=250
+
+# How often to clean up expired messages in seconds (default: 86400 = daily)
+# PROSODY_ARCHIVE_CLEANUP_INTERVAL=86400
+
+# Smart archiving: only enable for users who query their archive (default: false)
+# Set to true to save storage by only archiving for users who actually use MAM
+# PROSODY_MAM_SMART_ENABLE=false
+
+# Archive compression to save storage space (default: true)
+# PROSODY_ARCHIVE_COMPRESSION=true
+
+# Custom namespaces to exclude from archiving (comma-separated)
+# Default excludes typing indicators and call messages
+# PROSODY_ARCHIVE_EXCLUDE_NAMESPACES="custom:namespace:1,custom:namespace:2"
+
+# Archive store name (default: "archive", legacy: "archive2")
+# Only change if migrating from older MAM installations
+# PROSODY_ARCHIVE_STORE=archive
+
+# ============================================================================
 # ADVANCED SETTINGS (Optional - defaults are usually fine)
 # ============================================================================
 
